[tool.poetry]
name = "dridge"
version = "0.1.0"
description = ""
authors = ["Dénes Balogh <denes.balogh@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
litestar = {extras = ["jwt", "sqlalchemy", "structlog"], version = "^2.9.1"}
litestar-granian = "^0.5.0"
python-dotenv = "^1.0.1"
passlib = {extras = ["argon2"], version = "^1.7.4"}
httpx = "^0.27.0"
toml = "^0.10.2"
py-cord = "^2.6.0"
openai = "^1.36.0"
pyyaml = "^6.0.1"
asyncssh = "^2.15.0"
python-jose = "^3.3.0"
psutil = "^6.0.0"
granian = {extras = ["reload"], version = "^1.5.1"}
click = "^8.1.7"
pyoxidizer = "^0.24.0"

[tool.poetry.scripts]
dridge = "dridge.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
