[tool.poetry]
name = "dridge"
version = "0.1.0"
description = ""
authors = ["Dénes Balogh <denes.balogh@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
litestar = {extras = ["jwt", "sqlalchemy", "structlog"], version = "^2.9.1"}
litestar-granian = "^0.5.0"
python-dotenv = "^1.0.1"
passlib = {extras = ["argon2"], version = "^1.7.4"}
httpx = "^0.27.0"
toml = "^0.10.2"
py-cord = "^2.6.0"
openai = "^1.36.0"
pyyaml = "^6.0.1"
asyncssh = "^2.15.0"
python-jose = "^3.3.0"
psutil = "^6.0.0"
granian = {extras = ["reload"], version = "^1.5.1"}
click = "^8.1.7"

[tool.poetry.scripts]
dridge = "dridge.cli:main"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pyoxidizer = "^0.24.0"
ruff = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 80
target-version = "py310"
fix = true


[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
    "D100",    # pydocstyle - missing docstring in public module
    "D101",    # pydocstyle - missing docstring in public class
    "D102",    # pydocstyle - missing docstring in public method
    "D103",    # pydocstyle - missing docstring in public function
    "D104",    # pydocstyle - missing docstring in public package
    "D105",    # pydocstyle - missing docstring in magic method
    "D106",    # pydocstyle - missing docstring in public nested class
    "D107",    # pydocstyle - missing docstring in __init__
    "D202",    # pydocstyle - no blank lines allowed after function docstring
    "D203",    # pydocstyle - 1 blank line required before class docstring
    "D205",    # pydocstyle - 1 blank line required between summary line and description
    "D212",    # pydocstyle - Multi-line docstring summary should start at the first line
    "D415",    # pydocstyle - first line should end with a period, question mark, or exclamation point
    "ANN401",  # ruff - Dynamically typed expressions (typing.Any) are disallowed
    "PLR2004", # Magic value used in comparison
]
